--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
   /* justify-content: center; */
   color: #CB2D6F;
   /* background-image: url('https://by3302files.storage.live.com/y4p451eRpD4585QvGs9H6_AoEn-P6jP4NR-bCEVqiWhpso-jvvkWOUzgUEINk8TrBYY3vHJcTEvsIGuj7LbHOqUsw2Ratcv6NyiMlacnkviNGEIA4I0PrXTXXH5VI3rBr0XVoXBy6OChHrZKlFk4711tZWBbhgJ_o3oigNGpll8GTFM9YZ9wz9bnci_JOM0uCmumd5LT_5UGQNZa-2aA2YdEmtd1jmOGAkAr_Z6K0jOF9E/IMG_0385.jpg?psid=1&width=698&height=430'); */
-  background-image: url('https://by3302files.storage.live.com/y4p9Zp-Te0-gyYHOOB_rgZ8_jmLU4dFBaXuwnLl-rqlVFP31EwVT0-L-kDOr-7lN56txZH1_jGtESGWljYTM3POlOz0oa5d0EKCIsBaUzG-m074sV_A0g5KTvlcB7w7FiBjxQUk1VBUr1g9XlKtiGu8e7bD-EhV4Ff4EwNbmDo4kedblJMomEGr_ks9XZgPR-eV5SFXe3FGKvgYz8XIO_8isloZDg0SnzZhgOm63pJwWtY/IMG_0384.jpg?psid=1&width=828&height=424');
+  /* background-image: url('https://by3302files.storage.live.com/y4p9Zp-Te0-gyYHOOB_rgZ8_jmLU4dFBaXuwnLl-rqlVFP31EwVT0-L-kDOr-7lN56txZH1_jGtESGWljYTM3POlOz0oa5d0EKCIsBaUzG-m074sV_A0g5KTvlcB7w7FiBjxQUk1VBUr1g9XlKtiGu8e7bD-EhV4Ff4EwNbmDo4kedblJMomEGr_ks9XZgPR-eV5SFXe3FGKvgYz8XIO_8isloZDg0SnzZhgOm63pJwWtY/IMG_0384.jpg?psid=1&width=828&height=424'); */
   /* background: rgb(255, 255, 255, 0.5); */
   background-size: cover;
   background-position: center;
